# multiuser-ai-assistant

./: .gitignore  alembic.ini  database.py  main.py  models.py  pyproject.toml  schemas.py
agent/: chatbot.py
alembic/: env.py
alembic/versions/: 4c7342f621f3_.py
database/: database.py
models/: models.py
routes/: auth.py
util/: schemas.py  utils.py
